--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
             <img src="images/jhankar.png" alt="I am drinking cola">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/cola.png" alt="I am drinking cola">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a webdevloper</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dolore dolorum libero. Illum officiis
+                praesentium perspiciatis inventore tenetur qui tempore eum ea ipsa cupiditate dolore natus repellendus
+                quas, sint eveniet error suscipit veritatis. Eaque quisquam doloribus quos doloremque molestiae, at
+                beatae eum quaerat a aliquid? Id sequi inventore placeat minia!</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
