style border added footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexiable-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Sabbir Hossain</span>World!</h1>
@@ -29,7 +29,7 @@
             <img src="images/jhankar.png" alt="I am drinking cola">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexiable-container">
         <div class="half-width">
             <img src="images/cola.png" alt="I am drinking cola">
         </div>
@@ -43,6 +43,28 @@
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexiable-container">
+            <div id="full-stack-devloper" class="experience-item">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="orange-color">2022-Present Pro Level devloper</h3>
+                <p>I am a master of HTML CSS and JavaScript.I know everything how to make a website functional and fast.
+                    I
+                    didn't stop with the web. I didn't stop with the web</p>
+            </div>
+            <div id="baby-web-devloper" class="experience-item">
+                <h1>Baby Web Developer</h1>
+                <h3 class="orange-color">2022-2023 Programming Hero Learner</h3>
+                <p>i did't offer me a job. but I made my self a remote web dwevloper. I made their website and show it
+                    to
+                    them. They like it. It was fun working at progra ing hero</p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p>Copyright © 2022 Programming-hero.com</p>
+</footer>
 
 </html>
